<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProjectSubmissionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyToolbarTheme"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/gads_header"
                android:layout_height="100dp"/>

            <TextView
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/project_submission"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editext_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_background"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/edittext_lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editext_firstName"
        app:layout_constraintTop_toTopOf="@+id/editext_firstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_emailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_background"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_lastName"
        app:layout_constraintStart_toStartOf="@+id/editext_firstName"
        app:layout_constraintTop_toBottomOf="@+id/editext_firstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_background"
        android:ems="10"
        android:hint="@string/github"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_emailAddress"
        app:layout_constraintStart_toStartOf="@+id/editText_emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editText_emailAddress" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/size_200"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_color_submit"
        android:padding="16dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText_link"
        app:layout_constraintStart_toStartOf="@+id/editText_link"
        app:layout_constraintTop_toBottomOf="@+id/editText_link" />


</androidx.constraintlayout.widget.ConstraintLayout>